--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>shopcar</title>
   </head>
   <body>
-    <img class="banner border2" src="lojadecarros.jpg" alt="" />
-    <marquee class="border2" direction="right">As melhores ofertas</marquee>
+    <img class="banner border2" src="axolotecapa.jpg" alt="" />
+    <marquee class="border2" direction="right">Os melhores axolotes do mercado!</marquee>
 
     <div class="content">
-      <img class="car border1" src="antigo.jpg" alt="" />
-      <img class="car border1" src="caminhonete.jpg" alt="" />
-      <img class="car border1" src="esporte.jpg" alt="" />
+      <img class="car border1" src="axolote2.jpeg" alt="" />
+      <img class="car border1" src="axolote3.jpg" alt="" />
+      <img class="car border1" src="axolote4.jpg" alt="" />
     </div>
     <div class="content">
       <img src="slides/slide1.jpg" class="slide border1" alt="" />
